Move things around

--- a/SynetecAssessmentApi.Services/SynetecAssessmentApi.Services.csproj
+++ b/SynetecAssessmentApi.Services/SynetecAssessmentApi.Services.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SynetecAssessment.Persistence\SynetecAssessmentApi.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
